# ask-project-desktop

./: .gitignore  AGENTS.md  README.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
apps/desktop/: AGENTS.md  README.md  electron-builder.yml  eslint.config.mjs  next.config.ts  package.json
apps/desktop/electron/: README.md  main.cjs  main.ts  preload.cjs  preload.ts  tsconfig.json
apps/desktop/electron/assets/icons/: icon.icns
apps/desktop/native/: Cargo.toml
apps/desktop/native/src/: main.rs
apps/desktop/scripts/: cleanBuildArtifacts.mjs  releaseDesktop.mjs  runElectronDev.mjs
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/desktop/src/app/: globals.css  layout.tsx  page.tsx
apps/desktop/src/components/: ProjectCard.tsx  ProjectCommandHeader.tsx  ProjectEmpty.tsx  ProjectHudDashboard.tsx  ProjectManageBackground.tsx  ProjectManageTab.tsx  ProjectOnboardingGuide.tsx  ProjectPreferenceSetting.tsx  project-command-header.tsx  project-empty.tsx  project-manage-background.tsx  project-manage-tab.tsx  project-preference-setting.tsx
apps/desktop/src/hooks/: useCopyText.ts  useProjectBackground.ts  useProjectConfirm.tsx  useProjectInfoDialog.tsx  useProjectToast.tsx
apps/desktop/src/lib/: desktopRuntime.ts  mountReactComponent.tsx
apps/web/: AGENTS.md  README.md  nuxt.config.ts  package.json
apps/web/app/: app.vue
docs/: desktop-tailwind-style-todolist.md  feature-replication-checklist.md
scripts/: debugDesktopAgent.mjs  devDesktop.mjs
(+14 files in other folders)
